--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 /* image background for my form */
-body { 
-    background-image: linear-gradient(rgba(0, 0, 50, 0.5), rgba(0, 0, 50, 0.5)), url("image.jpg");
+body {
+    background-image:
+        linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
+        url("image.jpg");
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 /* login and registration form in the center */
